Fix wrong fontawesome path

--- a/style/variables.less
+++ b/style/variables.less
@@ -1721,7 +1721,6 @@
 // Variables
 // --------------------------
 
-@fa-font-path:        "../fonts";
 @fa-font-size-base:   14px;
 @fa-line-height-base: 1;
 //@fa-font-path:        "//netdna.bootstrapcdn.com/font-awesome/4.4.0/fonts"; // for referencing Bootstrap CDN font files directly
